--- a/templates/Errors/400.html
+++ b/templates/Errors/400.html
@@ -19,7 +19,7 @@ Bad Request (400)
     <p>This is not a problem on your end but on the server</p>
   </div>
   <div class="actions">
-    <a href="{{ url_for('users.home') }}">
+    <a href="{{ url_for('dashboard.index') }}">
       <button>Back Home</button>
     </a>
   </div>
