--- a/templates/Errors/403.html
+++ b/templates/Errors/403.html
@@ -20,7 +20,7 @@ Forbidden Access (403)
     <p>This page is only for the site admin</p>
   </div>
   <div class="actions">
-    <a href="{{ url_for('users.home') }}">
+    <a href="{{ url_for('dashboard.index') }}">
       <button>Back Home</button>
     </a>
   </div>
