--- a/templates/Errors/405.html
+++ b/templates/Errors/405.html
@@ -19,7 +19,7 @@ Method Not Allowed (405)
     <p>Check your Url</p>
   </div>
   <div class="actions">
-    <a href="{{ url_for('users.home') }}">
+    <a href="{{ url_for('dashboard.index') }}">
       <button>Back Home</button>
     </a>
   </div>
