--- a/templates/Errors/500.html
+++ b/templates/Errors/500.html
@@ -19,7 +19,7 @@ Something Went Wrong (500)
     <p>Please try again after a short while</p>
   </div>
   <div class="actions">
-    <a href="{{ url_for('users.home') }}">
+    <a href="{{ url_for('dahsboard.index') }}">
       <button>Back Home</button>
     </a>
   </div>
