--- a/static/css/base.css
+++ b/static/css/base.css
@@ -73,11 +73,13 @@ body {
 h4 {
   font-family: var(--font);
   font-weight: 600;
-  color: var(--black);
+  color: var(--color-text-secondary);
 }
 
-h1 {
-  color: var(--color-white);
+h1,
+h2,
+h3 {
+  color: var(--color-text-primary);
   font-family: var(--font);
 }
 
@@ -104,6 +106,7 @@ p,
 a,
 span,
 input,
+textarea,
 label,
 td,
 th {
@@ -144,13 +147,18 @@ button,
 }
 
 input,
-select {
+select,
+textarea {
   background-color: var(--color-light-grey-2);
   border: none;
   color: var(--color-text-primary);
   padding: 1em;
   border-radius: var(--radius-md);
   width: 100%;
+}
+
+textarea {
+  resize: vertical;
 }
 
 input:focus,
@@ -378,6 +386,21 @@ textarea:focus {
 .status-badge.cancelled {
   background-color: #feecec;
   color: #ef4444;
+}
+
+.tabs {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 1.5rem;
+  overflow-x: scroll;
+}
+
+.tabs::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.tabs .tab {
+  cursor: pointer;
 }
 
 .tab-content,
