--- a/templates/Errors/404.html
+++ b/templates/Errors/404.html
@@ -19,7 +19,7 @@ Page Not Found (404)
     <p id="error-text">The page you're looking for does not exist</p>
   </div>
   <div class="actions">
-    <a href="{{ url_for('users.home') }}">
+    <a href="{{ url_for('dashboard.index') }}">
       <button>Back Home</button>
     </a>
   </div>
