--- a/static/css/Main/case-details.css
+++ b/static/css/Main/case-details.css
@@ -16,3 +16,9 @@
 .header h1 {
   font-size: 1.2rem;
 }
+
+@media screen and (max-width: 1200px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
