--- a/templates/Auth/reset-password.html
+++ b/templates/Auth/reset-password.html
@@ -47,5 +47,5 @@ Reset Password
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+<script src="{{ url_for('static', filename='Js/auth.js') }}"></script>
 {% endblock %}
