--- a/templates/Main/client-profile.html
+++ b/templates/Main/client-profile.html
@@ -156,5 +156,5 @@ Home
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/home.js') }}"></script>
+<script src="{{ url_for('static', filename='Js/home.js') }}"></script>
 {% endblock %}
