--- a/templates/Main/index.html
+++ b/templates/Main/index.html
@@ -296,6 +296,6 @@ Home
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/home.js') }}"></script>
-<script src="{{ url_for('static', filename='js/notification.js') }}"></script>
+<script src="{{ url_for('static', filename='Js/home.js') }}"></script>
+<script src="{{ url_for('static', filename='Js/notification.js') }}"></script>
 {% endblock %}
