--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
     </main>
   </div>
 
-  <script src="{{ url_for('static',filename='js/base.js') }}"></script>
+  <script src="{{ url_for('static',filename='Js/base.js') }}"></script>
   {% block script %}{% endblock %}
 </body>
 
