--- a/templates/Main/client-profile.html
+++ b/templates/Main/client-profile.html
@@ -12,7 +12,7 @@ Home
 {% block nav %}
 <a href="{{ url_for('dashboard.index') }}" class="nav-item">
   <i class="fas fa-chevron-left"></i>
-  Back
+  Back To Dashboard
 </a>
 {% endblock %}
 
