--- a/templates/Main/add-client.html
+++ b/templates/Main/add-client.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/Main/add-client.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/form.css')}}">
 {% endblock %}
 
 {% block title %}
@@ -10,7 +10,7 @@ Home
 {% endblock %}
 
 {% block nav %}
-<a href="{{ url_for('dashboard.index') }}" class="nav-item">
+<a href="{{ back_url }}" class="nav-item">
   <i class="fas fa-chevron-left"></i>
   Back
 </a>
@@ -18,62 +18,63 @@ Home
 
 {% block body %}
 <div class="container">
-  <div class="auth-container">
+  <div class="form-header">
     <h1>Onboard Client</h1>
-    <form method="post" action="{{ url_for('client.add_client') }}" novalidate class="needs-validation">
-      {{ form.hidden_tag() }}
-
-      <div class="form-group">
-        {{ form.first_name.label(class="form-label") }}
-        {{ form.first_name(class="form-control", placeholder="Enter Client's First Name", required=true) }}
-        {% for error in form.first_name.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.last_name.label(class="form-label") }}
-        {{ form.last_name(class="form-control", placeholder="Enter Client's Last Name", required=true) }}
-        {% for error in form.last_name.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.email.label(class="form-label") }}
-        {{ form.email(class="form-control", placeholder="Enter Client's Email Address", required=true) }}
-        {% for error in form.email.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.phone.label(class="form-label") }}
-        {{ form.phone(class="form-control", placeholder="Enter Client's Phone Number", required=true) }}
-        {% for error in form.phone.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.address.label(class="form-label") }}
-        {{ form.address(class="form-control", placeholder="Enter Client's Address", required=true) }}
-        {% for error in form.address.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.client_type.label(class="form-label") }}
-        {{ form.client_type(class="form-control", placeholder="Enter Client's First Name", required=true) }}
-        {% for error in form.client_type.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <button class="btn btn-primary" type="submit">Onboard Client</button>
-    </form>
+    <p>Capture all required client details to facilitate the onboarding process</p>
   </div>
+  <form method="post" action="{{ url_for('client.add_client') }}" novalidate class="needs-validation">
+    {{ form.hidden_tag() }}
+
+    <div class="form-group">
+      {{ form.first_name.label(class="form-label") }}
+      {{ form.first_name(class="form-control", placeholder="Enter Client's First Name", required=true) }}
+      {% for error in form.first_name.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.last_name.label(class="form-label") }}
+      {{ form.last_name(class="form-control", placeholder="Enter Client's Last Name", required=true) }}
+      {% for error in form.last_name.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group extend">
+      {{ form.email.label(class="form-label") }}
+      {{ form.email(class="form-control", placeholder="Enter Client's Email Address", required=true) }}
+      {% for error in form.email.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.phone.label(class="form-label") }}
+      {{ form.phone(class="form-control", placeholder="Enter Client's Phone Number", required=true) }}
+      {% for error in form.phone.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.client_type.label(class="form-label") }}
+      {{ form.client_type(class="form-control", placeholder="Enter Client's First Name", required=true) }}
+      {% for error in form.client_type.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group extend">
+      {{ form.address.label(class="form-label") }}
+      {{ form.address(class="form-control", placeholder="Enter Client's Address", required=true) }}
+      {% for error in form.address.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <button class="btn btn-primary" type="submit">Onboard Client</button>
+  </form>
 </div>
 {% endblock %}
 
