--- a/templates/Main/new-case.html
+++ b/templates/Main/new-case.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/Main/add-client.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/form.css')}}">
 {% endblock %}
 
 {% block title %}
@@ -10,7 +10,7 @@ New Case
 {% endblock %}
 
 {% block nav %}
-<a href="{{ url_for('dashboard.index') }}" class="nav-item">
+<a href="{{ back_url }}" class="nav-item">
   <i class="fas fa-chevron-left"></i>
   Back
 </a>
@@ -18,71 +18,72 @@ New Case
 
 {% block body %}
 <div class="container">
-  <div class="auth-container">
+  <div class="form-header">
     <h1>New Case</h1>
-    <form method="post" action="{{ url_for('case.add_case', client_id=client.unique_id) }}" novalidate
-      class="needs-validation">
-      {{ form.hidden_tag() }}
-
-      <div class="form-group">
-        {{ form.title.label(class="form-label") }}
-        {{ form.title(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.title.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.description.label(class="form-label") }}
-        {{ form.description(class="form-control", placeholder="A a brief description of the case", required=true) }}
-        {% for error in form.description.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.case_type.label(class="form-label") }}
-        {{ form.case_type(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.case_type.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.court_name.label(class="form-label") }}
-        {{ form.court_name(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.court_name.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.case_number.label(class="form-label") }}
-        {{ form.case_number(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.case_number.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.opposing_party.label(class="form-label") }}
-        {{ form.opposing_party(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.opposing_party.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <div class="form-group">
-        {{ form.opposing_counsel.label(class="form-label") }}
-        {{ form.opposing_counsel(class="form-control", placeholder="Enter Case Title", required=true) }}
-        {% for error in form.opposing_counsel.errors %}
-        <div class="invalid-feedback d-block">{{ error }}</div>
-        {% endfor %}
-      </div>
-
-      <button class="btn btn-primary" type="submit">Create Case</button>
-    </form>
+    <p>Enter the following information about the case</p>
   </div>
+  <form method="post" action="{{ url_for('case.add_case', client_id=client.unique_id) }}" novalidate
+    class="needs-validation">
+    {{ form.hidden_tag() }}
+
+    <div class="form-group">
+      {{ form.title.label(class="form-label") }}
+      {{ form.title(class="form-control", placeholder="Enter Case Title", required=true) }}
+      {% for error in form.title.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.case_number.label(class="form-label") }}
+      {{ form.case_number(class="form-control", placeholder="Enter Case Title", required=true) }}
+      {% for error in form.case_number.errors %}
+      <div class="invalid-feedback d-block">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group extend">
+      {{ form.description.label(class="form-label") }}
+      {{ form.description(class="form-control", placeholder="A a brief description of the case", required=true) }}
+      {% for error in form.description.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.case_type.label(class="form-label") }}
+      {{ form.case_type(class="form-control", placeholder="Enter Case Title", required=true) }}
+      {% for error in form.case_type.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.court_name.label(class="form-label") }}
+      {{ form.court_name(class="form-control", placeholder="Enter Court Name", required=true) }}
+      {% for error in form.court_name.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.opposing_party.label(class="form-label") }}
+      {{ form.opposing_party(class="form-control", placeholder="Enter Opposing Party", required=true) }}
+      {% for error in form.opposing_party.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      {{ form.opposing_counsel.label(class="form-label") }}
+      {{ form.opposing_counsel(class="form-control", placeholder="Enter Opposing Counsel", required=true) }}
+      {% for error in form.opposing_counsel.errors %}
+      <div class="invalid-feedback">{{ error }}</div>
+      {% endfor %}
+    </div>
+
+    <button class="btn btn-primary" type="submit">Create Case</button>
+  </form>
 </div>
 {% endblock %}
 
