--- a/templates/Main/edit-client.html
+++ b/templates/Main/edit-client.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block title %}
-Add Client
+Edit Client
 {% endblock %}
 
 {% block nav %}
@@ -19,10 +19,11 @@ Add Client
 {% block body %}
 <div class="container">
   <div class="form-header">
-    <h1>Onboard Client</h1>
-    <p>Capture all required client details to facilitate the onboarding process</p>
+    <h1>Edit Client</h1>
+    <p>Update all required client details</p>
   </div>
-  <form method="post" action="{{ url_for('client.add_client') }}" novalidate class="needs-validation">
+  <form method="post" action="{{ url_for('client.edit_client', client_id=client.unique_id) }}" novalidate
+    class="needs-validation">
     {{ form.hidden_tag() }}
 
     <div class="form-group">
@@ -73,7 +74,7 @@ Add Client
       {% endfor %}
     </div>
 
-    <button class="btn btn-primary" type="submit">Onboard Client</button>
+    <button class="btn btn-primary" type="submit">Update Client Details</button>
   </form>
 </div>
 {% endblock %}
